# claude-toolkit

./: .gitignore  CLAUDE.md  DEV.md  README.md  SETUP.md  package.json  pnpm-lock.yaml  tsconfig.base.json
.github/workflows/: ci.yml  desktop-release.yml  site.yml
activity/: seed.json
agents/: backend-engineer.md  bug-fixer.md  code-reviewer.md  docs-writer.md  release-manager.md  security-auditor.md  tech-scout.md  test-runner.md  ui-designer.md
apps/desktop/: .env.example  index.html  package.json  vite.config.ts
apps/desktop/src/: App.tsx  (+3 more)
apps/desktop/src-tauri/: Cargo.toml  rust-toolchain.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs
apps/site/: astro.config.mjs  package.json
commands/: fix-ticket.md  new-feature.md  ship.md  standup.md  ui-audit.md
dashboard/: data.js  index.html
hooks/: HOOKS.md  guard.py  manifest.json  session_logger.py  settings-hooks.json
scripts/: generate-inventory.mjs
skills/backend-architect/: SKILL.md
skills/headsoff/: SKILL.md
skills/motion-animation/: SKILL.md
skills/prd-writer/: SKILL.md
skills/tech-radar/: SKILL.md
skills/testing-qa/: SKILL.md
skills/ticket-workflow/: SKILL.md
skills/token-saver/: SKILL.md
skills/ui-ux-master/: SKILL.md
skills/web-perf/: SKILL.md
supabase/: config.toml
supabase/migrations/: 20260709000001_phase2_core.sql  20260709000002_phase3_access.sql  20260710000003_phase4_proposals.sql  20260713000004_phase5_grant_visibility.sql  20260713000005_grant_selfheal.sql
(+59 files in other folders)
